vertical align top for carousel items - fixes #71

--- a/sass/components/_carousel.scss
+++ b/sass/components/_carousel.scss
@@ -15,6 +15,7 @@
     height: auto;
     display: inline-block;
     position: inherit;
+    vertical-align: top;
   }
 
   img {
